set java target to 8
buildserver didnt like 11